--- a/views/EachProduct/one_Product.ejs
+++ b/views/EachProduct/one_Product.ejs
@@ -12,8 +12,8 @@
     type="text/css"
     href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
   />
-  <link rel="stylesheet" href="/css/EachProduct/slick-theme.css" />
-    <link rel="stylesheet" href="/css/EachProduct/style.css">
+  <link rel="stylesheet" href="/css/Eachproduct/slick-theme.css" />
+    <link rel="stylesheet" href="/css/Eachproduct/style.css">
     <title>Product</title>
     
 </head>
