--- a/views/Signup&Login/login.ejs
+++ b/views/Signup&Login/login.ejs
@@ -65,7 +65,7 @@
 </html>
 <script>
 
-let url = "http://localhost:2222/user/login"
+let url = "https://ajio-clone-full.herokuapp.com/user/login"
 
 async function logIn(){
 
