--- a/views/Signup&Login/login.ejs
+++ b/views/Signup&Login/login.ejs
@@ -57,7 +57,7 @@
        <button  onclick="logIn()" id = "btn">CONTINUE</button>
 
        <!-- Terms & Cond. -->
-       <p class = "p">By Signing In, I agree to<span id = "color">Terms and Conditions.</span> </p>
+       <p class = "p">Go back to the <span id = "color"><a href="/user/signup">Sign page.</a></span> </p>
 </div>
 
 
